# TE1

./: .gitignore  CMakeLists.txt  README.md  affiche.py  affiche_expo.py  fcts.cpp  main.cpp  makefile  methods.cpp  util.cpp
data/: carre.txt
include/: fcts.h  methods.h  util.h
src/: fcts.cpp  main.cpp  methods.cpp  util.cpp
